--- a/tools/android/packaging/xbmc/src/channels/SyncChannelJobService.java.in
+++ b/tools/android/packaging/xbmc/src/channels/SyncChannelJobService.java.in
@@ -150,32 +150,20 @@ public class SyncChannelJobService extends JobService {
                 }
             }
 
+            Subscription sub = Subscription.createSubscription(mContext.getString(R.string.suggestion_channel), "", R.drawable.ic_recommendation_80dp);
+                 freshsubscriptions.add(sub);
+                 if (subscriptions.size() == 0)  // First-run: Add default channel
+                 {
+                   long channelId = TvUtil.createChannel(mContext, sub);
+                   sub.setChannelId(channelId);
+                   subscriptions.add(sub);
 
-            Subscription sub = Subscription.createSubscription(mContext.getString(R.string.suggestion_channel), "", R.drawable.channel_icon_main);
-            freshsubscriptions.add(sub);
-            if (subscriptions.size() == 0)  // First-run: Add default channel
-            {
-                long channelId = TvUtil.createChannel(mContext, sub);
-                sub.setChannelId(channelId);
-                subscriptions.add(sub);
+                   TvContractCompat.requestChannelBrowsable(mContext, channelId);
+                 }
 
-                TvContractCompat.requestChannelBrowsable(mContext, channelId);
-            }
-
-            for (File file : playlistsContent) {
-                int channelLogo;
-                if (file.getName().toLowerCase().contains("movies")) {
-                    Log.d(TAG, "doInBackground: movie icon");
-                    channelLogo = R.drawable.channel_icon_movies;
-                } else if (file.getName().toLowerCase().contains("tv")
-                        || file.getName().toLowerCase().contains("episodes")) {
-                    channelLogo = R.drawable.channel_icon_tv;
-                    Log.d(TAG, "doInBackground: tv icon");
-                } else {
-                    channelLogo = R.drawable.channel_icon_main;
-                    Log.d(TAG, "doInBackground: main icon");
-                }
-                sub = Subscription.createSubscription(file.getName(), file.getUri(), channelLogo);
+                 for (File file : playlistsContent)
+                 {
+                   sub = Subscription.createSubscription(file.getName(), file.getUri(), R.drawable.ic_recommendation_80dp);
 
         /*
          paul dhaliwal specific mods
